--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "background_color": "#151618",
-  "description": "Sej ",
+  "description": "Sejal",
   "dir": "ltr",
   "display": "fullscreen",
   "name": "sejalpurohit",
