config file updated

--- a/_data/projects_data.yml
+++ b/_data/projects_data.yml
@@ -1,24 +1,24 @@
 projects:
   - title: Sejal-Website
-    img: /assets/uploads/FoodCompany.png
+    img: /assets/uploads/sejal.jpg
     img_alt: Oops!
     about: Self-guided professional development
     tags: [ YAML, JS, HTML, CSS, Jekyll]
-    # link: https://sejalpurohit.github.io/react_projects/tree/main/FoodVilla/
+    # link: 
     code: https://github.com/sejalpurohit/sejalpurohit.github.io
   - title: FoodFolio
-    img: /assets/uploads/sejal.jpg
+    img: /assets/uploads/FoodCompany.png
     img_alt: Oops!
-    about: learning Angular through a hands-on project!
+    about: Learning React through a hands-on project with React, JavaScript and Redux!
     tags: [ React, JS, HTML, JSX, CSS, Redux]
-    # link: https://sejalpurohit.github.io/react_projects/tree/main/FoodVilla/
+    # link: 
     code: https://github.com/sejalpurohit/react_projects/tree/main/FoodVilla
   - title: UserData Management
     img: /assets/uploads/usermanagement.png
     img_alt: Oops!
-    about: learning React through a hands-on project with React, JavaScript and Redux!
+    about: Learning Angular through a hands-on project!
     tags: [ Angular, Typescript, HTML, CSS, JS]
-    # link: https://sejalpurohit.github.io/react_projects/tree/main/FoodVilla/
+    # link: 
     code: https://github.com/sejalpurohit/Angular_UserData/tree/main/src/app
   - title: Button Styling
     img: /assets/uploads/buttonStyling.png
