--- a/_data/owner.yml
+++ b/_data/owner.yml
@@ -2,7 +2,7 @@ name: Sejal Purohit
 dp: https://avatars.githubusercontent.com/sejalpurohit
 description:
   "<p><strong>Front-End Software Engineer</strong></p>
-  <p>From pixels to the backend: aspiring full-stack developer.</p>"
+  <p>From pixels to the backend: aspiring full-stack developer</p>"
 sub-description: ""
 hire: Want to hire me! Just drop a mail
 address: India
