--- a/_data/owner.yml
+++ b/_data/owner.yml
@@ -1,8 +1,7 @@
 name: Sejal Purohit
 dp: https://avatars.githubusercontent.com/sejalpurohit
 description:
-  "<p><strong>Front-End Software Engineer</strong></p>
-  <p>From pixels to the backend: aspiring full-stack developer</p>"
+  "<p><strong>Front-End Software Engineer</strong><br>From pixels to the backend: aspiring fullstack developer</p>"
 sub-description: ""
 hire: Want to hire me! Just drop a mail
 address: India
