--- a/_data/projects_data.yml
+++ b/_data/projects_data.yml
@@ -1,4 +1,11 @@
 projects:
+  - title: To-Do Task List
+    img: /assets/uploads/toDoList.png
+    img_alt: Oops!
+    about: Practicing Angular 
+    tags: [ Angular, JS, HTML, CSS, Typescript]
+    # link: 
+    code: https://github.com/sejalpurohit/todo-app-angular
   - title: Sejal-Website
     img: /assets/uploads/sejal.jpg
     img_alt: Oops!
@@ -10,7 +17,7 @@ projects:
     img: /assets/png/angular.png
     img_alt: Oops!
     about: Self-guided professional development
-    tags: [ Angular, TypeScript, JS, HTML, CSS]
+    tags: [ Angular, Typescript, JS, HTML, CSS]
     # link: 
     code: https://github.com/sejalpurohit/Angular_UserData
 
