--- a/_data/experience_data.yml
+++ b/_data/experience_data.yml
@@ -1,10 +1,11 @@
 experience:
   - title: Software Engineer
-    company: Upgrading skills independently 
-    dates: June 2024 – Present
+    company: Relocation and Transition Period
+    dates: June 2024 – March2025
     location: Manchester, United Kingdom
     responsibilities:
-      - Actively developing a website using React, Redux, Tailwind CSS, and Jest as part of a bootcamp tutorial.
+      - Exploring the latest version of Angular and engaging in hands-on practice through examples.
+      - Actively developing a new websites using React, Redux, Tailwind CSS, and Jest as part of a bootcamp tutorial.
       - Pursuing online tutorials for Node.js to enhance backend technology skills with the goal of becoming a proficient full-stack developer.
       - Building my own website to showcase my work and experience.
   
