--- a/_data/owner.yml
+++ b/_data/owner.yml
@@ -5,8 +5,8 @@ description:
 sub-description: ""
 hire: Want to hire me! Just drop a mail
 address: India
-website: https://sharadcodes.github.io
-email: dev_sharad@outlook.com
+website: https://github.com/sejalpurohit
+email: sejalpurohit3195@gmail.com
 contact:
   - title: linkedin
     url: https://www.linkedin.com/in/sejal-purohit/
@@ -14,3 +14,6 @@ contact:
     url: https://github.com/sejalpurohit
   - title: email
     url: mailto:sejalpurohit3195@gmail.com
+  - title: instagram
+    url: https://www.instagram.com/sejalpurohit?igsh=Yjk1Njk2Mm8wNTc0
+  
