insta link removed

--- a/_data/owner.yml
+++ b/_data/owner.yml
@@ -14,6 +14,6 @@ contact:
     url: https://github.com/sejalpurohit
   - title: email
     url: mailto:sejalpurohit3195@gmail.com
-  - title: instagram
-    url: https://www.instagram.com/sejalpurohit?igsh=Yjk1Njk2Mm8wNTc0
+  # - title: instagram
+  #   url: https://www.instagram.com/sejalpurohit?igsh=Yjk1Njk2Mm8wNTc0
   
