--- a/_data/projects_data.yml
+++ b/_data/projects_data.yml
@@ -7,14 +7,14 @@ projects:
     # link: 
     code: https://github.com/sejalpurohit/ShoppingCart
   - title: Wheel of Fortune! 
-    img: /assets/uploads/toDoList.png
+    img: /assets/uploads/spin_wheel.jpg
     img_alt: Oops!
     about: Spinning Wheel Game! 
     tags: [ JS, HTML, CSS, Bootstrap]
     link: https://sejalpurohit.github.io/FortuneWheel---JS/
     code: https://github.com/sejalpurohit/FortuneWheel---JS/
   - title: To-Do Task List
-    img: /assets/uploads/dev.png
+    img: /assets/uploads/toDoList.png
     img_alt: Oops!
     about: Practicing Angular 
     tags: [ Angular, JS, HTML, CSS, Typescript]
