--- a/_data/owner.yml
+++ b/_data/owner.yml
@@ -1,7 +1,7 @@
 name: Sejal Purohit
 dp: https://avatars.githubusercontent.com/sejalpurohit
 description:
-  "<p><strong>Front-End Software Engineer</strong><br>From pixels to the backend: Aspiring fullstack developer</p>"
+  "<p><strong>Software Engineer</strong><br>From pixels to the backend: Fullstack Developer</p>"
 sub-description: ""
 hire: Want to hire me! Just drop a mail
 address: India
